# OCaml-Interpreter

./: README.md  dune-project  interpreter_project.opam
_opam/.opam-switch/: switch-config
docs/: Compile course_practice_assignment.md
lib/: ast.ml  codegen.ml  dune  lexer.mll  optimizer.ml  parser.mly
test/: complex.tc  complexs1.s  dune  math_test1.in  math_test2.in  simple.tc  simples1.s
