(lang dune 3.17)

(name interpreter_project)

(generate_opam_files true)

(source
 (github AugustineYang/OCaml-Interpreter))

(authors "Yang Yuanzhao <yang_yuanzhao@whu.edu.cn>")

(license LICENSE)

(package
 (name interpreter_project)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
